	  are now shown. We now also take care of the control ROM version to emulate the most
	  prominent quirks. Additionally, there is a limited support for displaying the emulated LCD
	  on narrow hardware LCDs that have width of 16 characters only. (#66)
	* Fixed emulation of a TVA quirk the old-gen devices exhibit when playing a partial with
	  zero TVA ENV SUSTAIN LEVEL. (#82)

2021-08-07:

	2.5.3 released.

	* Fixed possible access to uninitialised rhythm timbre memory when using MT-32 control ROM.
	  With control ROMs 2.04 and above, the entire rhythm timbre memory is now initialised
	  as the real devices do. Those timbres that do not exist in MT-32 models are now muted.
	  With control ROMs 1.xx, the timbres 30..59 are mapped to 0..29 that should correspond
	  to the behaviour of real units. The other 4 timbres are muted to avoid undefined behaviour
	  the real hardware exhibits. (#72)

2021-07-18:

	2.5.2 released.

	* Fixed compilation of client programs written in C when the automatic runtime version check
	  is enabled with the preprocessor macro MT32EMU_RUNTIME_VERSION_CHECK 2. This may be needed
	  on systems where symbol versioning is unavailable. (#71)
	* Tweaked AUTHORS.txt to contain the entire license of embedded third-party code.

2021-05-22:

	2.5.1 released.

	* Fixed incorrect delete statement in ROMImage dtor, affects memory deallocations
	  of full ROMImages created by merging partial ones. (#60)

2021-04-02:

	2.5.0 released.

	* Added support for partial ROM images that may be dumped from several supported hardware
	  models. Previously, those had to be either concatenated or interleaved for the emulation
	  engine to accept. (#44)
	* Added a few API extensions to better handle ROM images that can now be either full and /
	  or partial, including iteration over several ROM files to find ones compatible with
	  particular model of hardware units. (#47)
	* Various improvements in build and packaging, in particular: