@@ -1,5 +1,5 @@
 /* Copyright (C) 2003, 2004, 2005, 2006, 2008, 2009 Dean Beeler, Jerome Fisher
- * Copyright (C) 2011-2021 Dean Beeler, Jerome Fisher, Sergey V. Mikayev
+ * Copyright (C) 2011-2022 Dean Beeler, Jerome Fisher, Sergey V. Mikayev
  *
  *  This program is free software: you can redistribute it and/or modify
  *  it under the terms of the GNU Lesser General Public License as published by
@@ -504,6 +504,16 @@ void Synth::setReverbOutputGain(float newReverbOutputGain) {
 
 float Synth::getReverbOutputGain() const {
 	return reverbOutputGain;
+}
+
+void Synth::setPartVolumeOverride(Bit8u partNumber, Bit8u volumeOverride) {
+	if (opened && partNumber < 9) {
+		parts[partNumber]->setVolumeOverride(volumeOverride);
+	}
+}
+
+Bit8u Synth::getPartVolumeOverride(Bit8u partNumber) const {
+	return (!opened || partNumber > 8) ? 255 : parts[partNumber]->getVolumeOverride();
 }
 
 void Synth::setReversedStereoEnabled(bool enabled) {
