@@ -20,6 +20,8 @@ HEAD:
 	  on narrow hardware LCDs that have width of 16 characters only. (#66)
 	* Fixed emulation of a TVA quirk the old-gen devices exhibit when playing a partial with
 	  zero TVA ENV SUSTAIN LEVEL. (#82)
+	* Introduced support for configuring per-part volume levels that override the levels set via
+	  MIDI messages. (#85)
 
 2021-08-07:
 
